EF, Racipe Model, first migrations

--- a/MenuApp/Views/Home/Index.cshtml
+++ b/MenuApp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 </div>
                 <a href="" class="banner__btn">Recipes for you</a>
             </div>
-            <div class="banner__photo"  style="background-image: url(~/wwwroot/media/banner.png);"></div>
+            <div class="banner__photo"></div>
         </div>
     </div>
 </section>
