DI, Passing Data to the Recipe Controller, displaying data

--- a/MenuApp/Views/Shared/_Layout.cshtml
+++ b/MenuApp/Views/Shared/_Layout.cshtml
@@ -30,40 +30,17 @@
                 </div>
             </nav>
         </header>*@
-    <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__logo">
-                    <a asp-area="" asp-controller="Home" asp-action="Index">
-                        <span>Stay</span>Healthy
-                    </a>
-                </div>
-                <nav class="header__menu">
-                    <ul>
-                        <li>
-                            <form action="" class="header__form">
-                                <input type="text" placeholder="Search...">
-                                <button type="submit"><img src="media/search_white.svg" alt=""></button>
-                            </form>
-                        </li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a href="#">Recipes</a></li>
-                        <li><a href="#">Login</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
 
-    </header>
+    <partial name="~/Views/Shared/_Header.cshtml" />
     @RenderBody()
 
     @*<footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - MenuApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>*@
+            <div class="container">
+                &copy; 2021 - MenuApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>*@
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
