Added Register View Model, some css edit

--- a/MenuApp/Views/Shared/_Layout.cshtml
+++ b/MenuApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             </nav>
         </header>*@
 
-    <partial name="~/Views/Shared/_Header.cshtml" />
+    @*<partial name="~/Views/Shared/_Header.cshtml" />*@
     @RenderBody()
 
     @*<footer class="border-top footer text-muted">
