Added Register View

--- a/MenuApp/Views/Account/Login.cshtml
+++ b/MenuApp/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
                         <label asp-for="Password">Password</label>
                         <input asp-for="Password" type="text" placeholder="Password">
                     </div>
-                    <button type="submit" class="banner__btn">Sign In</button>
+                    <input type="submit" value="Sign In" class="banner__btn">
                     <div class="form__group remember">
                         <label asp-for="RememberMe" class="forgot__pass">Remember Me</label>
                         <input asp-for="RememberMe" type ="checkbox">
