--- a/MenuApp/Views/Account/Login.cshtml
+++ b/MenuApp/Views/Account/Login.cshtml
@@ -5,23 +5,21 @@
             <div class="login__left">
                 <h1>Sign In</h1>
                 <form id="login__form" method="post" asp-action="Login" asp-controller="Account">
-                    <div class="form__group" asp-validation-summary="All">
+                    <div class="form__group">
                         <label asp-for="Email"> Email</label>
                         <input asp-for="Email" type="text" placeholder="Email">
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    <div class="form__group" asp-validation-summary="All">
+                    <div class="form__group">
                         <label asp-for="Password">Password</label>
                         <input asp-for="Password" type="text" placeholder="Password">
+                        <span asp-validation-for="Password"class="text-danger"></span>
                     </div>
                     <input type="submit" value="Sign In" class="banner__btn">
                     <div class="form__group remember">
                         <label asp-for="RememberMe" class="forgot__pass">Remember Me</label>
-                        <input asp-for="RememberMe" type ="checkbox">
+                        <input asp-for="RememberMe" type="checkbox">
                     </div>
-
-
-
-
                 </form>
 
             </div>
@@ -34,3 +32,6 @@
             </div>
         </div>
     </section>
+@section Scripts{ 
+<partial name="_ValidationScriptsPartial"/>
+}
