--- a/MenuApp/Views/Account/Register.cshtml
+++ b/MenuApp/Views/Account/Register.cshtml
@@ -1,44 +1,49 @@
 ﻿@model MenuApp.Models.ViewModels.RegisterViewModel
 
-    <section class="login__section">
-        <div class="login__inner">
-            <div class="login__left">
-                <h1>Sign Up</h1>
-                <form  id="register__form" asp-action="Register" asp-controller="Account">
-                    <div class="form__group" asp-validation-summary="All">
-                        <label asp-for="Name"> Name</label>
-                        <input asp-for="Name" type="text" placeholder="Name..." id="name">
-                        <span asp-validation-for="Name"></span>
-                    </div>
-                    <div class="form__group" asp-validation-summary="All">
-                        <label asp-for="Email"> Email</label>
-                        <input asp-for="Email" type="text" placeholder="Email address..." id="email">
-                        <span asp-validation-for="Email"></span>
-                    </div>
-                    <div class="form__group" asp-validation-summary="All">
-                        <label asp-for="Password">Password</label>
-                        <input asp-for="Password" type="text" placeholder="Password" id="input__password">
-                        <span asp-validation-for="Password"></span>
-                    </div>
-                    <div class="form__group" asp-validation-summary="All">
-                        <label asp-for="ConfirmPassword">Repeat Password</label>
-                        <input asp-for="ConfirmPassword" type="text" placeholder="Repeat Password" id="repeat__password">
-                        <span asp-validation-for="ConfirmPassword"></span>
-                    </div>
-                    <div class="form__group" asp-validation-summary="All">
-                        <label asp-for="RoleName">Role Name</label>
-                        <input asp-for="RoleName" asp-items="@MenuApp.Helper.Helper.GetRolesForDropDown()">
-                        <span asp-validation-for="RoleName"></span>
-                    </div>
-                    <input type="submit" value="Sign Up" class="banner__btn">
-                </form>
-            </div>
-            <div class="login__right">
-                <div class="login__info">
-                    <div class="login__title">Welcome to Register</div>
-                    <div class="login__text">Already have an account?</div>
-                    <a asp-action="Login" class="banner__btn">Sign In</a>
+<section class="login__section">
+    <div class="login__inner">
+        <div class="login__left">
+            <h1>Sign Up</h1>
+            <div class=" text-danger" asp-validation-summary="All"></div>
+            <form id="register__form" asp-action="Register" asp-controller="Account">
+                <div class="form__group">
+                    <label asp-for="Name"> Name</label>
+                    <input asp-for="Name" type="text" placeholder="Name..." id="name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
+                <div class="form__group" >
+                    <label asp-for="Email"> Email</label>
+                    <input asp-for="Email" type="text" placeholder="Email address..." id="email">
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form__group" >
+                    <label asp-for="Password">Password</label>
+                    <input asp-for="Password" type="text" placeholder="Password" id="input__password">
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form__group" >
+                    <label asp-for="ConfirmPassword">Repeat Password</label>
+                    <input asp-for="ConfirmPassword" type="text" placeholder="Repeat Password" id="repeat__password">
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <div class="form__group">
+                    <label asp-for="RoleName">Role Name</label>
+                    <select asp-for="RoleName" asp-items="@MenuApp.Helper.Helper.GetRolesForDropDown()"></select>
+                    <span asp-validation-for="RoleName" class="text-danger"></span>
+                </div>
+                <input type="submit" value="Sign Up" class="banner__btn">
+            </form>
+        </div>
+        <div class="login__right">
+            <div class="login__info">
+                <div class="login__title">Welcome to Register</div>
+                <div class="login__text">Already have an account?</div>
+                <a asp-action="Login" class="banner__btn">Sign In</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial"/>
+}
